--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'user'
+    baseName = 'user-service'
     version = '0.0.1-SNAPSHOT'
 }
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
