Adding Spring Boot with Docker features

--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,21 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('se.transmode.gradle:gradle-docker:1.2')
     }
 }
+
+group = 'garystafford' //dockerhub org
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'docker'
 
 jar {
     baseName = 'user-service'
-    version = '0.0.1-SNAPSHOT'
+    version =  '0.1.0'
 }
 
 sourceCompatibility = 1.8
@@ -25,6 +29,18 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+task buildDocker(type: Docker, dependsOn: build) {
+  push = true
+  applicationName = jar.baseName
+  dockerfile = file('src/main/docker/Dockerfile')
+  doFirst {
+    copy {
+      from jar
+      into stageDir
+    }
+  }
 }
 
 dependencies {
@@ -37,6 +53,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
 
 dependencyManagement {
