--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -20,6 +20,22 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 ENV FILEBEAT_SRC_SHA1=3fde7f5f5ea837140965a193bbb387c131c16d9c \
     FILEBEAT_VERSION=1.2.3
 
+RUN set -ex \
+  && apk --no-cache add --virtual .build-dependencies \
+    curl \
+  \
+  && curl -fsSL http://download.elastic.co/beats/filebeat/filebeat-${FILEBEAT_VERSION}-x86_64.tar.gz -o /tmp/filebeat.tar.gz \
+  \
+  && cd /tmp \
+  && echo "${FILEBEAT_SRC_SHA1} *filebeat.tar.gz" | sha1sum -c - \
+  && tar -xzf filebeat.tar.gz \
+  \
+  && cd filebeat-* \
+  && cp filebeat /bin \
+  \
+  && rm -rf /tmp/filebeat* \
+  && apk del .build-dependencies
+
 ### configure Filebeat
 # config file
 ADD filebeat.yml /etc/filebeat/filebeat.yml
