--- a/src/main/docker/Dockerfile_dh
+++ b/src/main/docker/Dockerfile_dh
@@ -1,13 +1,19 @@
-# Builds the User Service using Spring Boot with Docker
+# Builds the User Service Docker Image on Docker Hub
 
 FROM frolvlad/alpine-oraclejdk8:slim
 
 MAINTAINER Gary A. Stafford <garystafford@rochester.rr.com>
 ENV REFRESHED_AT 2016-08-13
 
-VOLUME /tmp
-ADD user-service-0.1.0.jar /app.jar
-RUN sh -c 'touch /app.jar'
+# install jar from GitHub
+ENV GITHUB_REPO https://github.com/garystafford/microservice-docker-demo-artifacts/raw/master
+ENV APP_FILE user-service-0.1.0.jar
+
+RUN set -ex \
+  && apk --no-cache add --virtual .build-dependencies curl \
+  && curl -fsSL ${GITHUB_REPO}/${APP_FILE} -o /app.jar \
+  && sh -c 'touch /app.jar'
+
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 
 #########################################################################################
@@ -20,11 +26,7 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 ENV FILEBEAT_SRC_SHA1=3fde7f5f5ea837140965a193bbb387c131c16d9c \
     FILEBEAT_VERSION=1.2.3
 
-RUN set -ex \
-  && apk --no-cache add --virtual .build-dependencies \
-    curl \
-  \
-  && curl -fsSL http://download.elastic.co/beats/filebeat/filebeat-${FILEBEAT_VERSION}-x86_64.tar.gz -o /tmp/filebeat.tar.gz \
+RUN curl -fsSL http://download.elastic.co/beats/filebeat/filebeat-${FILEBEAT_VERSION}-x86_64.tar.gz -o /tmp/filebeat.tar.gz \
   \
   && cd /tmp \
   && echo "${FILEBEAT_SRC_SHA1} *filebeat.tar.gz" | sha1sum -c - \
