--- a/src/main/docker/filebeat.yml
+++ b/src/main/docker/filebeat.yml
@@ -17,7 +17,7 @@ filebeat:
       document_type: syslog
     -
       paths:
-        - user-service.log
+        - /user-service.log
       document_type: spring
       multiline:
         pattern: '^[[:space:]]+|^Caused by:'
