--- a/src/main/docker/Dockerfile_dh
+++ b/src/main/docker/Dockerfile_dh
@@ -42,8 +42,8 @@ RUN curl -fsSL http://download.elastic.co/beats/filebeat/filebeat-${FILEBEAT_VER
 ADD filebeat.yml /etc/filebeat/filebeat.yml
 
 # CA cert
-# RUN mkdir -p /etc/pki/tls/certs
-# ADD logstash-beats.crt /etc/pki/tls/certs/logstash-beats.crt
+RUN mkdir -p /etc/pki/tls/certs
+ADD logstash-beats.crt /etc/pki/tls/certs/logstash-beats.crt
 
 ### start Filebeat
 ADD start.sh /usr/local/bin/start.sh
