--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -7,7 +7,8 @@ ENV REFRESHED_AT 2016-08-13
 
 VOLUME /tmp
 ADD user-service-0.1.0.jar /app.jar
-RUN sh -c 'touch /app.jar'
+RUN sh -c 'touch /app.jar' \
+  && touch /user-service.log
 
 #########################################################################################
 # below from:
