--- a/src/main/docker/Dockerfile_dh
+++ b/src/main/docker/Dockerfile_dh
@@ -41,6 +41,7 @@ RUN curl -fsSL http://download.elastic.co/beats/filebeat/filebeat-${FILEBEAT_VER
 ### configure Filebeat
 # config file
 ADD filebeat.yml /etc/filebeat/filebeat.yml
+ADD filebeat.template.json /etc/filebeat/filebeat.template.json
 
 # CA cert
 RUN mkdir -p /etc/pki/tls/certs
