--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: user-service
   cloud:
-    config:
-      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
-      failFast: true
+    consul:
+      host: ${CONSUL_SERVER_URL:localhost}
+      port: 8500
+      config:
+        fail-fast: true
+        format: yaml
